--- a/Kenny/Kenny.csproj
+++ b/Kenny/Kenny.csproj
@@ -39,6 +39,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="CsQuery">
+      <HintPath>..\packages\CsQuery.1.3.4\lib\net40\CsQuery.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System" />
     <Reference Include="System.Data" />
@@ -177,6 +180,10 @@
     <Compile Include="Migrations\201305150156163_AddOwnerToSite.Designer.cs">
       <DependentUpon>201305150156163_AddOwnerToSite.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201305312012261_AddDateCollectedToFoundLogin.cs" />
+    <Compile Include="Migrations\201305312012261_AddDateCollectedToFoundLogin.Designer.cs">
+      <DependentUpon>201305312012261_AddDateCollectedToFoundLogin.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountModels.cs" />
     <Compile Include="Models\FoundLogin.cs" />
@@ -252,6 +259,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201305150156163_AddOwnerToSite.resx">
       <DependentUpon>201305150156163_AddOwnerToSite.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201305312012261_AddDateCollectedToFoundLogin.resx">
+      <DependentUpon>201305312012261_AddDateCollectedToFoundLogin.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
