--- a/Kenny/Web.config
+++ b/Kenny/Web.config
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <!--
   For more information on how to configure your ASP.NET application, please visit
   http://go.microsoft.com/fwlink/?LinkId=169433
@@ -9,8 +9,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=5.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="KennyContext" connectionString="Data Source=(localdb)\v11.0; Initial Catalog=KennyContext-20130509214626; Integrated Security=True; MultipleActiveResultSets=True; AttachDbFilename=|DataDirectory|KennyContext-20130509214626.mdf"
-      providerName="System.Data.SqlClient" />
+    <add name="KennyContext" connectionString="Data Source=(localdb)\v11.0; Initial Catalog=KennyContext-20130509214626; Integrated Security=True; MultipleActiveResultSets=True; AttachDbFilename=|DataDirectory|KennyContext-20130509214626.mdf" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="2.0.0.0" />
@@ -56,7 +55,7 @@
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="System.Web.Mvc" publicKeyToken="31bf3856ad364e35" />
-        <bindingRedirect oldVersion="1.0.0.0-4.0.0.0" newVersion="4.0.0.0" />
+        <bindingRedirect oldVersion="0.0.0.0-4.0.0.0" newVersion="4.0.0.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="System.Web.WebPages" publicKeyToken="31bf3856ad364e35" />
