--- a/Kenny/Kenny.csproj
+++ b/Kenny/Kenny.csproj
@@ -199,6 +199,7 @@
     <Content Include="Assets\css\home.css" />
     <Content Include="Assets\img\glyphicons-halflings-white.png" />
     <Content Include="Assets\img\glyphicons-halflings.png" />
+    <Content Include="Assets\img\kenny-loggins-ascii.png" />
     <Content Include="Assets\js\bootstrap.js" />
     <Content Include="Assets\js\bootstrap.min.js" />
     <Content Include="favicon.ico" />
